# PreBuildCI

./: .gitignore  README.md  pyproject.toml
prebuildci/: __init__.py  cli.py  engine.py  env.py  exceptions.py  logging.py  recipe.py  target.py
prebuildci/actions/: __init__.py  checkout.py  prebuildpp.py
prebuildci/helpers/: __init__.py  artifacts.py  fs.py  git.py  shell.py
tests/: test_cli.py  test_engine.py  test_recipes.py
tests/recipes/: fmt_recipe.py  hello_recipe.py  target_recipe.py
