[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prebuildci"
version = "0.1.0"
description = "A Python CI framework for defining build pipelines as code"
requires-python = ">=3.12"
dependencies = []   # zero mandatory third-party deps — stdlib only

[project.scripts]
prebuildci = "prebuildci.cli:main"

[project.optional-dependencies]
s3 = ["boto3>=1.34"]
colors = ["colorama>=0.4.6"]
dev = ["pytest>=8", "coverage"]

[tool.setuptools.packages.find]
where = ["."]
include = ["prebuildci*"]
